# jav-fs

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Justfile  README.md  cog.toml  jav-fs.example.toml
.scratch/accurate-duplicate-scan/: PRD.md
.scratch/organize-jav-media/: PRD.md
.scratch/organize-jav-media/issues/: 01-extend-video-file-recognition.md  02-organize-dry-run-cli-and-config.md  03-organize-source-scan-and-basic-report.md  04-organize-target-path-planning.md  05-generate-nfo-for-organize.md  06-download-organize-artwork.md  07-apply-organize-move-and-cleanup.md  08-polish-organize-reporting-and-docs.md
docs/: architecture.md  cli.md  organize-design.md  recognition-rules.md
docs/agents/: domain.md
scripts/: pre-commit.sh
src/: lib.rs  main.rs
