[package]
name = "jav-fs"
version = "0.1.0"
edition = "2021"

[lib]
name = "jav_fs"
path = "src/lib.rs"

[[bin]]
name = "jav-fs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
# glob = "0.3.0"
crossterm = "0.25.0"
regex = "1.6.0"
ignore = "0.4"
dashmap = "5.5"
url = "2.5"
indicatif = "0.17"
